# sentry

./: .gitignore  .pre-commit-config.yaml  CHANGES  Makefile  eslint.config.ts  jest.config.ts  knip.config.ts  migrations_lockfile.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-base.txt  rspack.config.ts  setup.cfg  tsconfig.json  vercel.json
.github/: CODEOWNERS  codeowners-coverage-baseline.txt  dependabot.yml  file-filters.yml
.github/workflows/: acceptance.yml  backend.yml  frontend-snapshots.yml  frontend.yml  label-pullrequest.yml  openapi-diff.yml  openapi.yml  refactor-tasks.yml
.sentry-refactor-tasks/: README.md  repo.yaml
.sentry-refactor-tasks/conventions/: complete-hook-dependencies.yaml  deprecated-needs-replacement.yaml  eslint-json-runner.ts  no-callback-api-request.yaml  no-capitalized-function-calls.yaml  no-class-components.yaml  no-deprecated-callsite.detect.sh  no-deprecated-callsite.yaml  no-derived-state.detect.sh  no-derived-state.yaml  no-effect-set-state.yaml  no-global-mutation-in-render.yaml  no-ref-access-during-render.yaml  no-render-time-mutation.yaml  preserve-manual-memoization.yaml  pure-render-functions.yaml  react-compiler-invariant.yaml  react-compiler-json-runner.ts  react-compiler-unexpected-error.yaml  react-compiler.detect.sh  rules-of-hooks.yaml  static-component-definitions.yaml  valid-use-memo.yaml
api-docs/: index.ts  openapi-diff.ts  openapi.json  package.json  pnpm-lock.yaml
build-utils/: mdx-plugins.ts  po-catalog-loader.ts  story-manifest.ts
config/: build-chartcuterie.ts
devservices/: config.yml
devservices/config/: relay-edge.yml  taskbroker-sentry.yml  taskbroker-subscriptions.yml  taskbroker.yml
fixtures/: github.py  gitlab.py
fixtures/emails/: alert.txt  n1_api_call.txt  performance.txt
fixtures/profiles/: valid_android_profile.json
fixtures/seer/: webhooks.py
scripts/: analyze-styled.ts  build-js-loader.ts  dev-ui-server.ts  genEmbedWidgets.ts
src/: AGENTS.md
src/apigw/: config.py  proxy.py
src/sentry/: constants.py  event_manager.py  event_preprocessors.py  exceptions.py  killswitches.py  reprocessing2.py  viewer_context.py
src/sentry/web/: api.py  (+2 more)
static/app/: api.spec.tsx  appQueryClient.tsx  main.tsx  utils.tsx
static/gsAdmin/: routes.tsx
static/gsApp/: constants.tsx  generateRouteMap.spec.tsx  registerOverrides.tsx
tests/acceptance/: test_create_project.py  test_incidents.py  test_organization_events_v2.py  test_project_tags_settings.py  test_scm_onboarding.py
tests/apidocs/: test_hooks.py  test_operation_id_uniqueness.py
tests/apigw/: test_proxy.py  test_routing.py
tests/js/: setup.ts
tests/sentry/: test_devimports.py  test_wsgi.py
tools/: bump_version.py
(+4330 files in other folders)
