[metadata]
name = sentry
version = 26.8.0.dev0
description = A realtime logging and aggregation server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sentry.io
author = Sentry
author_email = oss@sentry.io
license = FSL-1.0-Apache-2.0
license_files = LICENSE.md
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.13
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sentry = sentry.__main__:main
sentry.apps =
    # TODO: This can be removed once the getsentry tests no longer check for this app
    auth_activedirectory = sentry.auth.providers.saml2.activedirectory
    auth_auth0 = sentry.auth.providers.saml2.auth0
    auth_github = sentry.auth.providers.github
    auth_jumpcloud = sentry.auth.providers.saml2.jumpcloud
    auth_okta = sentry.auth.providers.saml2.okta
    auth_onelogin = sentry.auth.providers.saml2.onelogin
    auth_rippling = sentry.auth.providers.saml2.rippling
    auth_saml2 = sentry.auth.providers.saml2.generic

[options.package_data]
sentry =
    static/sentry/dist/**
    static/sentry/images/**
    static/sentry/js/**
    static/sentry/vendor/**

[options.exclude_package_data]
sentry =
    static/sentry/app/**
    static/sentry/fonts/**
    static/sentry/less/**

[flake8]
# Flake8 is now ONLY used for custom Sentry S* rules.
# All other linting (E, W, F, B, LOG, I) is handled by ruff.
# See [tool.ruff] in pyproject.toml for the main linting configuration.
select = S
per-file-ignores =
    # these scripts must have minimal dependencies so opt out of the usual sentry rules
    .github/*: S
    devenv/*.py: S
    src/sentry/build/*: S
    tools/*: S
    # testing the options manager itself
    src/sentry/testutils/helpers/options.py, tests/sentry/options/test_manager.py: S011

[flake8:local-plugins]
paths = .
extension =
    S=tools.flake8_plugin:SentryCheck

[coverage:run]
omit =
    src/sentry/migrations/*
plugins =
    covdefaults
    sentry_covdefaults_disable_branch_coverage

[coverage:report]
# Setting this to 0 makes it falsy, and it gets ignored, so we set it to
# a value we'll never fall below. (0 is the default, but it's changed to 100 by
# covdefaults, so this just changes it back.)
fail_under = 0.01
